# unifi-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
unifi_cli/: auth.py  cli.py  config.py  controller.py  output.py
